deployment/ossrs/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: ossrs-rtmp-ingestion-service
  namespace: video-proc-streaming
spec:
  selector:
    app:  ossrs
  type:  ClusterIP
  ports:
  - name:  rtmp
    port:  1935
    targetPort:  1935
  - name: http
    port: 1938
    targetPort: 1938
