deployment/ossrs/istio-routing.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
    name: uob-tv-ingestion-routes
    namespace: video-proc-streaming
spec:
    hosts:
    - ossrs-rtmp-ingestion-service
    - "ingest.uob-tv.co.uk"
    gateways:
    - uob-tv-ingestion-gateway
    tcp:
    - match:
        - port: 1935
      route:
      - destination:
          host: ossrs-rtmp-ingestion-service
          port:
            number: 1935
    http:
    - match:
      - uri:
          prefix: /api
      route:
      - destination:
          host: ossrs-http-api
          port:
            number: 1985
